fix: FV-104 - fix warnings